# BeeOnTime

./: .gitignore  generate_icons.py  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: busybee.rs  lib.rs  main.rs
src/components/: ControlBar.tsx  SessionDots.tsx  Settings.tsx  TimerDisplay.tsx
src/components/busybee/: BusyBeeActiveTask.tsx  BusyBeeSettings.tsx  BusyBeeTaskPicker.tsx  README.md  busybee.css  index.ts
src/hooks/: useBusyBee.ts  useTimer.ts
src/lib/: busybee.ts
