[package]
name = "bee-on-time"
version = "0.1.0"
description = "BeeOnTime — Pomodoro Timer"
authors = []
edition = "2021"

[lib]
name = "bee_on_time_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bee-on-time"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
thiserror = "2"
